feat: #108 カテゴリーをユーザー定義できるようにし、順番を設定画面で入れ替えられるようにする
